[package]
name = "assets"
version = "0.1.0"
authors = ["ltorbay <ltorb@dolby.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = {version = "1.0", features = ["derive"] }
plotters = "0.3.1"
plotters-canvas = "0.3.0"
chrono = "0.4.19"
[dev-dependencies]
assert_approx_eq = "1.1.0"